--- a/index.html
+++ b/index.html
@@ -51,5 +51,24 @@
         </li>
       </ul>
     </div>
+    <!-- list -->
+    <div class="list">
+      <h1>Input</h1>
+      <form class="my-form">
+        <div class="form-g">
+          <label>Name: </label>
+          <input type="text" name="name" />
+        </div>
+        <div class="form-g">
+          <label>Email: </label>
+          <input type="text" name="email" />
+        </div>
+        <div class="form-g">
+          <label>Message: </label>
+          <textarea name="message"></textarea>
+        </div>
+        <input class="button" type="submit" name="button" />
+      </form>
+    </div>
   </body>
 </html>
