--- a/index.html
+++ b/index.html
@@ -70,5 +70,85 @@
         <input class="button" type="submit" name="button" />
       </form>
     </div>
+    <div class="block">
+      <h3>head1</h3>
+      <p>
+        Cryptography, or cryptology, is the practice and study of techniques for
+        secure communication in the presence of adversarial behavior. More
+        generally, cryptography is about constructing and analyzing protocols
+        that prevent third parties or the public from reading private messages.
+      </p>
+    </div>
+    <div class="block">
+      <h3>head1</h3>
+      <p>
+        Submit Cryptography, or cryptology, is the practice and study of
+        techniques for secure communication in the presence of adversarial
+        behavior. More generally, cryptography is about constructing and
+        analyzing protocols that prevent third parties or the public from
+        reading private messages.
+      </p>
+    </div>
+    <div class="block">
+      <h3>head1</h3>
+      <p>
+        Cryptography, or cryptology, is the practice and study of techniques for
+        secure communication in the presence of adversarial behavior. More
+        generally, cryptography is about constructing and analyzing protocols
+        that prevent third parties or the public from reading private messages.
+      </p>
+    </div>
+    <div class="clr"></div>
+
+    <div id="main-block">
+      <h3>HEad2</h3>
+      <p>
+        In this video I will cram as much as possible about CSS. We will be
+        looking at styles, selectors, declarations, etc. We will build a CSS
+        cheat sheet that you can keep as a resource and we will also create a
+        basic website layout. We are using CSS3 but mostly the basics. I will be
+        creating an advanced CSS course with animations, etc. I do have a
+        Flexbox in 20 minutes video as well if you want to learn flexbox.
+      </p>
+    </div>
+
+    <div id="sidebar">
+      <p>
+        In this video I will cram as much as possible about CSS. We will be
+        looking at styles, selectors, declarations, etc. We will build a CSS
+        cheat sheet that you can keep as a resource and we will also create a
+        basic website layout. We are using CSS3 but mostly the basics. I will be
+        creating an advanced CSS course with animations, etc. I do have a
+        Flexbox in 20 minutes video as well if you want to learn flexbox.
+      </p>
+    </div>
+    <div class="clr"></div>
+    <div class="p-box">
+      <h1>Hello World !</h1>
+      <h2>Arch Btw</h2>
+    </div>
+    <a class="fix button" target="_blank" href="https://shadowelite.me"
+      >shadow</a
+    >
+    <div class="list new">
+      <ul>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+        <li>list1</li>
+      </ul>
+    </div>
   </body>
 </html>
